traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:12: error: value update is not a member of Int
  if(getX() = getMondeLargeur()-1){
     ^